--- a/source/_posts/도커-레지스트리-만들기.md
+++ b/source/_posts/도커-레지스트리-만들기.md
@@ -348,7 +348,7 @@ Status: Downloaded newer image for registry.example.com/alipine:latest
 
 도커 레지스트리 설치하고 HTTPS까지 설정하여 언제 어디서나 레지스트리를 이용할 수 있게 되었습니다. 문서 초반에도 설명했지만 클라우드를 이용하고 있다면 해당 클라우드의 레지스트리 서비스를 이용하는게 가장 좋습니다.
 
-만약 도커 레지스트리를 입맛에 맞게 설정하려면 [레지스트리 설정](https://docs.docker.com/registry/configuration/)을 확인하세요.
+만약 도커 레지스트리를 입맛에 맞게 설정하려면 [레지스트리 설정](https://docs.docker.com/registry/configuration/)을 확인하세요. `htpasswd`가 아닌 다른 인증 방식을 사용하고 싶으면 [레지스트리 인증](https://docs.docker.com/registry/spec/auth/)에서 원하는 인증방식을 선택하세요.
 
 ## 참고
 
